--- a/app/src/main/res/layout/activity_main_options.xml
+++ b/app/src/main/res/layout/activity_main_options.xml
@@ -116,7 +116,7 @@
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             style="@style/BtnPages"
-            android:text="Return" />
+            android:text="Logout" />
     </LinearLayout>
 
     <LinearLayout
