--- a/app/src/main/res/layout/activity_learn_more.xml
+++ b/app/src/main/res/layout/activity_learn_more.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#1a1a1a">
+    android:background="#fe104d">
 
     <TextView
         android:id="@+id/txtViewPrj"
